--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,29 @@ services:
       - users_management_volume:/users_management_service_dockerized
     ports:
       - "8000:8000"
-    image: users_management_service:latest
+    image: users_management_service:user_management
     container_name: users_management_service
     command: python manage.py runserver 0.0.0.0:8000
 
+  chat_service:
+    build:
+      context: ./chat_service
+      dockerfile: Dockerfile
+    volumes:
+      - chat_service_volume:/chat_service_dockerized
+    ports:
+      - "8002:8000"
+    image: chat_service:chat
+    container_name: chat_service
+    command: python manage.py runserver 0.0.0.0:8002
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
 volumes:
   users_management_volume:
+  chat_service_volume:
