--- a/.devcontainer/chat_service/docker-compose.yml
+++ b/.devcontainer/chat_service/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   chat_service:
     volumes:
-      - ..:/workspaces:cached
+      - ./chat_service:/chat_service_dockerized:cached 
 
     command: /bin/sh -c "while sleep 1000; do :; done"
  
