--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,26 @@ services:
     image: users_management_service:user_management
     container_name: users_management_service
     command: python manage.py runserver 0.0.0.0:8000
+    environment:
+      - DATABASE_HOST=${DATABASE_HOST} 
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+    depends_on:
+      - users_mysql
+
+  users_mysql:
+    image: mysql:5.7
+    volumes:
+      - mysql_data:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE=${DATABASE_NAME} 
+      - MYSQL_USER=${DATABASE_USER}
+      - MYSQL_PASSWORD=${DATABASE_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    ports:
+      - "3308:3306"
+
 
   chat_service:
     build:
@@ -30,3 +50,6 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
+
+volumes:
+  mysql_data:
