--- a/.devcontainer/chat_service/docker-compose.yml
+++ b/.devcontainer/chat_service/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 services:
-  chat_service:
+  chat-service:
     volumes:
-      - ./chat_service:/chat_service_dockerized:cached 
+      - ./chat-service:/chat_service_dockerized:cached 
 
     command: /bin/sh -c "while sleep 1000; do :; done"
  
