--- a/chat-service/requirements.txt
+++ b/chat-service/requirements.txt
@@ -21,6 +21,7 @@ jsonschema-specifications==2023.11.2
 outcome==1.3.0.post0
 packaging==23.2
 Pillow==10.1.0
+pika==1.2.0
 pluggy==1.3.0
 protobuf==4.21.12
 pycparser==2.21
