added rabbit MQ configurations to the services' internal set  up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,8 +85,13 @@ services:
     image: "rabbitmq:3-management"
     container_name: rabbitmq
     ports:
-      - "5672:5672"  # Default port for RabbitMQ
-      - "15672:15672"  # Management interface
+      - "5672:5672"  
+      - "15672:15672" 
+    env_file:
+      - ./.env
+    environment:
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
