--- a/users-management-service/requirements.txt
+++ b/users-management-service/requirements.txt
@@ -1,8 +1,9 @@
-asgiref
+asgiref==3.8.1
 attrs==23.1.0
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 coverage==7.3.3
 Django==5.0
@@ -10,18 +11,27 @@ django-cors-headers==4.3.1
 djangorestframework==3.14.0
 dnspython==2.4.2
 drf-spectacular==0.27.0
+ghp-import==2.1.0
 h11==0.14.0
 idna==3.6
 inflection==0.5.1
 iniconfig==2.0.0
+Jinja2==3.1.4
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.2
+Markdown==3.6
+MarkupSafe==2.1.5
+mergedeep==1.3.4
+mkdocs==1.6.0
+mkdocs-get-deps==0.2.0
 mysql-connector-python==8.2.0
 mysqlclient==2.2.0
 outcome==1.3.0.post0
 packaging==23.2
-Pillow==10.1.0
+pathspec==0.12.1
 pika==1.2.0
+Pillow==10.1.0
+platformdirs==4.2.2
 pluggy==1.3.0
 protobuf==4.21.12
 pycparser==2.21
@@ -32,15 +42,18 @@ pytest-cov==4.1.0
 pytest-cover==3.0.0
 pytest-coverage==0.0
 pytest-django==4.7.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+pyyaml_env_tag==0.1
 referencing==0.32.0
 requests==2.31.0
 requests-mock==1.11.0
 responses==0.24.1
 rpds-py==0.13.2
 selenium==4.16.0
+setuptools==69.5.1
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
@@ -50,4 +63,6 @@ trio-websocket==0.11.1
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==2.1.0
+watchdog==4.0.0
+wheel==0.43.0
 wsproto==1.2.0
