--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,23 @@ services:
     networks:
       - backend
 
+  #build a frontend service here
+  frontend:
+    build:
+      context: ./frontend
+    container_name: frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/frontend-dockerized:cached
+    command: npm start
+    environment:
+      - REACT_APP_USERS_SERVICE_URL=http://users-management-service:8001
+      - REACT_APP_CHAT_SERVICE_URL=http://chat-service:8002
+      - ENVIRONMENT=development
+    networks:
+      - backend
+
 networks:
   backend:
     driver: bridge
