restart frontend build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,6 +116,9 @@ services:
       - ENVIRONMENT=development
     networks:
       - backend
+    depends_on:
+      - users-management-service
+      - chat-service
 
 networks:
   backend:
