--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,20 @@
 # Use an official Node runtime as a parent image
-FROM node:14
+FROM node:18
 
 # Set the working directory to /app
 WORKDIR /frontend-dockerized
 
-# Copy the current directory contents into the container at /app
+# Clear npm cache
+RUN npm cache clean --force
+
+# Copy package.json and package-lock.json
+COPY package*.json ./
+
+# Install project dependencies including Bootstrap, React Bootstrap, Axios, and React Router
+RUN npm install && \
+    npm install bootstrap react-bootstrap axios react-router-dom
+
+# Copy the current directory contents into the container at /frontend-dockerized
 COPY . /frontend-dockerized
 
 # Install any needed packages specified in package.json
