updating Dockerfile to solve compatibility issue between the 'Pillow¨library and the python version.

--- a/translation-service/Dockerfile
+++ b/translation-service/Dockerfile
@@ -1,9 +1,14 @@
-FROM python:3
+FROM python:3.11
 ENV PYTHONUNBUFFERED=1
 WORKDIR /translation-service-dockerized
 
+# Upgrade pip and setuptools before installing dependencies
+RUN pip install --upgrade pip setuptools wheel
+
 # Copy the requirements file first to leverage Docker cache
 COPY requirements.txt /translation-service-dockerized/
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the code
 COPY . /translation-service-dockerized/
