--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   users-management-service:
     build:
@@ -73,6 +71,21 @@ services:
       - users-management-service
       - chat-service
       - rabbitmq
+
+  translation-worker:
+    build:
+      context: ./translation-service
+    container_name: translation-worker
+    command: python manage.py run_translation_worker
+    env_file:
+      - ./.env
+    networks:
+      - backend
+    depends_on:
+      - rabbitmq
+      - redis
+      - translation-service
+    restart: always
 
   users_mysql:
     image: mysql:5.7
