--- a/translation-service/Dockerfile
+++ b/translation-service/Dockerfile
@@ -1,6 +1,11 @@
 FROM python:3.11
 ENV PYTHONUNBUFFERED=1
+ENV DJANGO_SETTINGS_MODULE=translation_manager.settings
+
 WORKDIR /translation-service-dockerized
+
+# Install system deps
+RUN apt-get update && apt-get install -y netcat-openbsd
 
 # Upgrade pip and setuptools before installing dependencies
 RUN pip install --upgrade pip setuptools wheel
