--- a/.github/workflows/docker-integration-tests.yml
+++ b/.github/workflows/docker-integration-tests.yml
@@ -2,9 +2,9 @@ name: Integration Tests with Docker Compose
 
 on:
   push:
-    branches: [dev]
+    branches: [main]
   pull_request:
-    branches: [dev]
+    branches: [main]
 
 jobs:
   integration-tests:
