--- a/.github/workflows/users-db-connectivity.yml
+++ b/.github/workflows/users-db-connectivity.yml
@@ -2,9 +2,9 @@ name: Users DB Connectivity Test
 
 on:
   push:
-    branches: [dev]
+    branches: [main]
   pull_request:
-    branches: [dev]
+    branches: [main]
 
 jobs:
   users-db-connectivity:
